# block-blast-clone

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  WHY_THIS_PROJECT.md  docker-compose.yml  pyproject.toml
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: routes_auth.py  routes_game.py  routes_score.py  ws_game.py
backend/src/core/: database.py  dependencies.py  lifespan.py  secrets.py
backend/src/game/: blocks.py  board.py  constants.py  engine.py  logic.py  play.py  scoring.py  session.py  shapes.py  statemachine.py
backend/src/models/: board.py  game_session.py  player.py  score.py  shape.py
backend/src/repositories/: game_session_repo.py  player_repo.py  score_repo.py
backend/src/schemas/: auth.py  game.py  score.py
backend/src/services/: auth_service.py  game_service.py  ws_handler.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/integration/api/: _auth_helpers.py  conftest.py  test_routes_auth.py  test_routes_auth_db.py  test_routes_game.py  test_routes_score.py  test_ws_game.py
backend/tests/integration/core/: test_database.py  test_lifespan.py
backend/tests/integration/repositories/: __init__.py  test_game_session_repo.py  test_player_repo.py  test_score_repo.py
backend/tests/unit/: test_blocks.py  test_board.py  test_scoring.py
backend/tests/unit/core/: test_database.py  test_lifespan.py
backend/tests/unit/game/: test_board.py  test_constants.py  test_engine.py  test_logic.py  test_scoring.py  test_session.py  test_shapes.py  test_statemachine.py
backend/tests/unit/models/: test_board.py  test_shape.py
backend/tests/unit/services/: conftest.py  test_auth_service.py  test_ws_handler.py
backend/tests/unit/services/data/: test_get_game_data.py  test_get_ml_state.py  test_place_shape_data.py
backend/tests/unit/services/game_service/: test_create_game.py  test_end_game.py  test_get_game.py  test_get_ml_state.py  test_place_shape.py
frontend/: .dockerignore  .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/coverage/: index.html
frontend/coverage/src/: App.tsx.html  constants.ts.html  index.html
frontend/src/: App.tsx  constants.ts  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  scores.ts
frontend/src/components/: AuthForm.tsx  Cell.tsx  DragOverlay.tsx  GameBoard.tsx  GameControls.tsx  GameInitScreen.tsx  GameOverOverlay.tsx  Grid.tsx  Scoreboard.tsx  ScoresList.tsx  ShapeGrid.tsx  ShapePreview.tsx  ShapeSelector.tsx  UserBar.tsx
frontend/src/contexts/: AuthContext.tsx  DragContext.tsx
frontend/src/hooks/: useAuth.ts  useBoardInteraction.ts  useDrag.ts  useDragHandlers.ts  useDragPreview.ts  useGameApi.ts  useGameState.ts  useMyScores.ts  useShapeDrag.ts
frontend/src/styles/: App.module.css  AuthForm.module.css  (+12 more)
frontend/test/: handlers.ts  setup.ts
k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  postgres.yaml  schema-configmap.yaml
(+50 files in other folders)
