[project]
name = "block-blast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "greenlet>=3.5.1",
    "sqlalchemy>=2.0.50",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "pre-commit>=4.6.0",
    "pyrefly>=1.0.0",
    "pytest==9.0.3",
]

[tool.setuptools.packages.find]
# This tells Python: "Treat backend/src as the root for imports"
where = ["backend"]
include = ["*"]

[tool.pytest.ini_options]
# This helps pytest find the code without needing PYTHONPATH
pythonpath = ["backend"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
