[project]
name = "block-blast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "greenlet>=3.5.1",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.50",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "pre-commit>=4.6.0",
    "pyrefly>=1.0.0",
    "pytest==9.0.3",
    "testcontainers[postgres]>=4.14.2",
]

[tool.setuptools.packages.find]
# backend/ is the project root; the importable package is `src`.
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
# Put the project root (backend/) on sys.path so `import src` / `import tests` work.
pythonpath = ["."]
markers = [
    "integration: tests that require Docker (real Postgres via testcontainers). Deselect with '-m \"not integration\"'.",
]

[tool.pyrefly]
# backend/ is the import root, so `src` resolves as a package.
search-path = ["."]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
